# azs_MAXIMKA

./: pyproject.toml
azs/: asgi.py  settings.py  urls.py  wsgi.py
azs_app/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
azs_app/migrations/: 0001_initial.py
azs_app/static/azs_app/css/: styles.css
azs_app/templates/azs_app/: base.html  sql_query.html  statistics_view.html  tables_view.html
